--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@swimlane/ngx-charts": "^7.1.1",
+    "@toverux/ngx-sweetalert2": "^3.4.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
@@ -29,6 +30,7 @@
     "ngx-bootstrap": "^2.0.3",
     "ngx-chips": "^1.6.7",
     "rxjs": "^5.5.6",
+    "sweetalert2": "^7.15.1",
     "underscore": "^1.8.3",
     "zone.js": "^0.8.19"
   },
