--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Aviv Haruzi",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.222.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
