--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blog",
   "version": "1.0.0",
-  "description": "",
+  "description": "Blog API",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.222.1",
-    "bcrypt": "^1.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
@@ -20,8 +20,8 @@
     "express-fileupload": "^0.4.0",
     "helmet": "^3.12.0",
     "jsonwebtoken": "^8.2.0",
-    "mongoose": "^5.0.10",
-    "morgan": "^1.9.0",
+    "mongoose": "^5.10.7",
+    "morgan": "^1.10.0",
     "path": "^0.12.7"
   }
 }
